--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cicd",
   "version": "1.0.0",
   "description": "A simple Node.js project with CI/CD integration",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
